samples/_failures_safe/1761727312_95a2da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39292cc8.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_39292cc8.c:175:9: error: expected declaration or statement at end of input
  175 |         case TOKEN_IDENTIFIER:
      |         ^~~~
./samples/SAFE/__tmp_39292cc8.c:175:9: error: expected declaration or statement at end of input
